# cli-agent

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
cli_agent/: get_api_key.py  main.py  tools.py
cli_agent.egg-info/: PKG-INFO  SOURCES.txt
src/: card.html
src/andro_cli/: main.py
src/andro_cli/agent/: __init__.py  config.py  runner.py
src/andro_cli/agent/models/: __init__.py
src/andro_cli/agent/tools/: __init__.py  files.py  network.py  system.py
src/andro_cli/ui/: __init__.py  app.py
src/andro_cli/ui/components/: __init__.py  bubble.py  input_bar.py
