[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "androincli"
version = "0.1.6"
description = "A CLI Agent powered by Gemini AI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Andro", email = "androkingdom1@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.100.0",
    "python-dotenv>=1.0.0",
    "openai-agents>=0.9.1",
]

[project.scripts]
andro = "andro_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
